# homePractice_functions

./: CMakeLists.txt  boolFunction.cpp  comparisonFunc.cpp  funcPrototype.cpp  global_localVariables.cpp  main.cpp  multFunction.cpp  paramsFunc.cpp  stringFunc.cpp  sumFunction.cpp
