cmake_minimum_required(VERSION 3.28)
project(functions)

set(CMAKE_CXX_STANDARD 17)

#add_executable(functions main.cpp)
#add_executable(functions funcPrototype.cpp)
#add_executable(functions stringFunc.cpp)
#add_executable(functions sumFunction.cpp)
#add_executable(functions boolFunction.cpp)
#add_executable(functions comparisonFunc.cpp)
#add_executable(functions multFunction.cpp)
#add_executable(functions paramsFunc.cpp)
add_executable(fucntions global_localVariables.cpp)